--- a/app/src/Home/Menu.css
+++ b/app/src/Home/Menu.css
@@ -17,6 +17,8 @@
   color: white;
 }
 
-.Menu .nav-item .nav-link {
-  color: white;
+@media screen and (min-width: 960px) {
+  .Menu .nav-item .nav-link {
+    color: white;
+  }
 }
